# lira-test-task

./: DESIGN.md  README.md  pyproject.toml
schemas/: 1040.json  w2.json
src/: extractor.py  main.py
tests/: test_extractor.py
