[project]
name = "lira-test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Olha Kashyrina"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.107.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tiktoken (>=0.11.0,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
packages = [
    { include = "src" }
]